# kairos

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile.dev  Dockerfile.prod  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
data/: pubmed_qdrant_etl.ipynb
docker/qdrant-init/: Dockerfile  entrypoint.sh
etl/: chunking.py  ingest_documents.py  run_etl.py
scripts/: setup_etl.ps1
src/app/: main.py
src/app/a2a/: __init__.py  agent_card.py  executor.py  schemas.py
src/app/core/: __init__.py  auth.py  config.py  rag.py
tests/: test_a2a_endpoint.py  test_executor.py  test_rag.py
ui/: app.py  rag.py
