[project]
name = "kairos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "a2a-sdk>=1.1.1",
    "fastapi>=0.139.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "sse-starlette>=3.4.6",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.22",
]
etl = [
    "qdrant-client>=1.13.0",
    "transformers>=4.46.0",
    "torch>=2.4.0",
    "lxml>=5.3.0",
    "httpx>=0.27.0",
    "tqdm>=4.66.0",
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
    "boto3>=1.35.0",
    "playwright>=1.48.0",
    "python-dotenv>=1.0.1",
]
ui = [
    "streamlit>=1.35.0",
    "groq>=0.9.0",
    "python-dotenv>=1.0.1",
]


[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
src = ["src", "tests"]
target-version = "py312"

[tool.mypy]
strict = true
python_version = "3.12"
